--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Paralax Scrolling Demo</title>
-    <link rel="stylesheet" type="text/css" href="assets/main.css">
+    <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body onload="init()">
     <div align="center">
       <canvas id="game-canvas" width="512" height="384"></canvas>
     </div>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/pixi.dev.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
