--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,10 @@
     <title>Paralax Scrolling Demo</title>
     <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
-  <body onload="init()">
+  <body>
     <div align="center">
       <canvas id="game-canvas" width="512" height="384"></canvas>
     </div>
-    <script type="text/javascript" src="js/pixi.dev.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script src="js/require.js" data-main="js/app"></script>
   </body>
 </html>
